--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <body>
         <h1>Hello World!</h1>
         <p>This is a simple paragraph.</p>
+        
+        <iframe src="https://jguitar.com/scale/C/Ionian" title="scales"></iframe> 
     </body>
 
 </html>
