--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Hello World!</h1>
         <p>This is a simple paragraph.</p>
         
-        <iframe src="https://jguitar.com/scale/C/Ionian" title="scales"></iframe> 
+        <iframe src="https://jguitar.com/scale/C/Ionian" width="100%" height="300" title="scales"></iframe> 
     </body>
 
 </html>
