--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     </head>
 
     <body>
-        <h1>Hello World!</h1>
-        <p>This is a simple paragraph.</p>
+        <h1>Pick a Track</h1>
+        <iframe src="https://www.youtube.com/" width="100%" height="500" title="track"></iframe> 
         
-        <iframe src="https://jguitar.com/scale/C/Ionian" width="100%" height="300" title="scales"></iframe> 
+        <p>Find a scale</p>
+        
+        <iframe src="https://jguitar.com/scale/C/Ionian" width="100%" height="400" title="scales"></iframe> 
     </body>
 
 </html>
