--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>Pick a Track</h1>
-        <iframe src="https://hooktube.com/watch?v=AuqbNouPH7c" width="100%" height="500" title="track"></iframe> 
+        <iframe src="https://youtube.com/watch?v=AuqbNouPH7c" width="100%" height="500" title="track"></iframe> 
         
         <p>Find a scale</p>
         
